--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Link shorter, fast and free. Created by Octanium (octanium91.github.io \ octanium91@gmail.com)"
     />
+    <meta
+      name="image"
+      content="/assets/img/tag-img.jpg"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
