--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -13,6 +13,14 @@
       name="image"
       content="/assets/img/tag-img.jpg"
     />
+    <meta
+      property="og:title"
+      content="Link shorter! Fast and free!"
+    />
+    <meta
+      property="og:image"
+      content="/assets/img/tag-img.jpg"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
