--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -19,7 +19,19 @@
     />
     <meta
       property="og:image"
-      content="/assets/img/tag-img.jpg"
+      content="https://slink.sbs/assets/img/tag-img.jpg"
+    />
+    <meta
+      property="og:image:width"
+      content="1200"
+    />
+    <meta
+      property="og:image:height"
+      content="1200"
+    />
+    <meta
+      name="twitter:image"
+      content="https://slink.sbs/assets/img/tag-img.jpg"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
