--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       name="image"
-      content="/assets/img/tag-img.jpg"
+      content="https://slink.sbs/assets/img/tag-img.jpg"
     />
     <meta
       property="og:title"
