--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       name="image"
-      content="https://slink.sbs/assets/img/tag-img.jpg"
+      content="%PUBLIC_URL%/assets/img/tag-img.jpg"
     />
     <meta
       property="og:title"
@@ -19,7 +19,7 @@
     />
     <meta
       property="og:image"
-      content="https://slink.sbs/assets/img/tag-img.jpg"
+      content="%PUBLIC_URL%/assets/img/tag-img.jpg"
     />
     <meta
       property="og:image:width"
@@ -31,7 +31,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://slink.sbs/assets/img/tag-img.jpg"
+      content="%PUBLIC_URL%/assets/img/tag-img.jpg"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
