--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -12,36 +12,25 @@
     </script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <title>Link shorter! Fast and free!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Link shorter, fast and free. Created by Octanium (octanium91.github.io \ octanium91@gmail.com)"
-    />
-    <meta
-      name="image"
-      content="%PUBLIC_URL%/assets/img/tag-img.png"
-    />
-    <meta
-      property="og:title"
-      content="Link shorter! Fast and free!"
-    />
-    <meta
-      property="og:image"
-      content="%PUBLIC_URL%/assets/img/tag-img.png"
-    />
-    <meta
-      property="og:image:width"
-      content="1200"
-    />
-    <meta
-      property="og:image:height"
-      content="1200"
-    />
-    <meta
-      name="twitter:image"
-      content="%PUBLIC_URL%/assets/img/tag-img.png"
-    />
+    <meta name="description" content="Link shorter, fast and free. Created by Octanium (octanium91.github.io \ octanium91@gmail.com)"/>
+    <meta itemprop="name" content="Link shorter! Fast and free!">
+    <meta itemprop="description" content="Link shorter, fast and free. Created by Octanium (octanium91.github.io \ octanium91@gmail.com)">
+    <meta itemprop="image" content="%PUBLIC_URL%/assets/img/tag-img.png">
+    <meta property="og:url" content="https://slink.sbs/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Link shorter! Fast and free!">
+    <meta property="og:description" content="Link shorter, fast and free. Created by Octanium (octanium91.github.io \ octanium91@gmail.com)">
+    <meta property="og:image" content="%PUBLIC_URL%/assets/img/tag-img.png">
+    <meta property="og:image:width" content="1200"/>
+    <meta property="og:image:height" content="1200"/>
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Link shorter! Fast and free!">
+    <meta name="twitter:description" content="Link shorter, fast and free. Created by Octanium (octanium91.github.io \ octanium91@gmail.com)">
+    <meta name="twitter:image" content="%PUBLIC_URL%/assets/img/tag-img.png">
+    <meta name="image" content="%PUBLIC_URL%/assets/img/tag-img.png"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -60,7 +49,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Link shorter! Fast and free!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
