test robots.txt #2

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -31,7 +31,9 @@
     <meta name="twitter:description" content="Link shorter, fast and free. Created by Octanium (octanium91.github.io \ octanium91@gmail.com)">
     <meta name="twitter:image" content="%PUBLIC_URL%/assets/img/tag-img.png">
     <meta name="image" content="%PUBLIC_URL%/assets/img/tag-img.png"/>
+    <meta name="robots" content="noindex,nofollow">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="alternate" hreflang="x-default" href="https://slink.sbs/openAPI" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
